--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -545,167 +545,94 @@ body {
 
 
         // Load tasks for a specific date
+
+
+
         async function loadTasksForDate(selectedDate) {
-    const adminEmail = localStorage.getItem("currentAdminEmail");
-    if (!adminEmail) return;
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  if (!adminEmail) return;
 
-    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-    const result = await response.json();
-    const tasks = result.tasks || [];
-    console.log("Fetched tasks for", selectedDate, JSON.stringify(tasks));
+  const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+  const result = await response.json();
+  const tasks = result.tasks || [];
 
-    const taskList = document.getElementById("taskList");
-    taskList.innerHTML = "";
+  const taskList = document.getElementById("taskList");
+  taskList.innerHTML = "";
 
-    function parseLocalDate(dateStr) {
-        const [year, month, day] = dateStr.split("-").map(Number);
-        return new Date(year, month - 1, day);
-    }
+  function parseLocalDate(dateStr) {
+    const [year, month, day] = dateStr.split("-").map(Number);
+    return new Date(year, month - 1, day);
+  }
 
-    const visibleTasks = tasks.filter(task => {
-        if (!task.date) return false;
-        const range = task.date.split(" to ");
-        const from = parseLocalDate(range[0]);
-        const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-        const selected = parseLocalDate(selectedDate);
-        return selected >= from && selected <= to;
-    });
+  const visibleTasks = tasks.filter(task => {
+    if (!task.date) return false;
+    const range = task.date.split(" to ");
+    const from = parseLocalDate(range[0]);
+    const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+    const selected = parseLocalDate(selectedDate);
+    return selected >= from && selected <= to;
+  });
 
-    if (visibleTasks.length === 0) {
-        taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
-        return;
-    }
+  if (visibleTasks.length === 0) {
+    taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+    return;
+  }
 
-    visibleTasks.forEach((task) => {
-        const taskDiv = document.createElement("div");
-        taskDiv.className = "task-item";
-        taskDiv.dataset.taskTitle = task.title;
-        taskDiv.dataset.taskDate = task.date;
-
-        let repeatLimit = 1;
-        if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-        if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-        if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
-
-        const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-const completedCount = completedUsers.length;
-const userOrder = [...task.users];
-
-const currentTurn = userOrder[completedCount % userOrder.length];
-const nextUser = userOrder[(completedCount + 1) % userOrder.length];
-const isCompleted = completedCount >= repeatLimit;
-
-
-        taskDiv.innerHTML = `
-            <strong>${task.title}</strong><br>
-            Turn: ${currentTurn}<br>
-            Next: ${nextUser}<br>
-            Completed: ${completedCount}/${repeatLimit}<br>
-            ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
-            <button class="delete-btn">Delete</button>
-        `;
-
-        taskDiv.addEventListener("click", async (e) => {
-            if (!e.target.classList.contains("delete-btn")) {
-                const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-                const result = await response.json();
-                const latestTask = result.tasks.find(t => t.title === task.title && t.date === task.date);
-                if (latestTask) showTaskDetails(latestTask);
-            }
-        });
-
-        taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-            if (confirm("Are you sure you want to delete this task?")) {
-                await deleteTaskFromBackend(task.title, task.date);
-                loadTasksForDate(selectedDate);
-            }
-        });
-
-        taskList.appendChild(taskDiv);
-        enableSwipeToDelete(taskDiv);
-    });
-}
-
-
-        // Show task details in a modal
-        async function showTaskDetails(task) {
-    const selectedDate = document.querySelector(".day.selected")?.dataset.date;
-    if (!selectedDate) return;
+  visibleTasks.forEach((task) => {
+    const taskDiv = document.createElement("div");
+    taskDiv.className = "task-item";
+    taskDiv.dataset.taskTitle = task.title;
+    taskDiv.dataset.taskDate = task.date;
 
     const userOrder = [...task.users];
-
-    let repeatLimit = 1;
-    if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const completedCount = completedUsers.length;
 
-    const currentTurn = userOrder[completedCount % userOrder.length];
-    const nextUser = userOrder[(completedCount + 1) % userOrder.length];
+    let currentTurn = task.currentTurnIndex !== undefined ? userOrder[task.currentTurnIndex] : userOrder[0];
+    let nextUser = currentTurn;
 
-    let taskDetails = "";
-    if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
-    if (task.notes) taskDetails += `<strong>Notes:</strong> ${task.notes}<br>`;
-    if (task.room) taskDetails += `<strong>Room:</strong> ${task.room}<br>`;
-    if (task.repeat) {
-        taskDetails += `<strong>Frequency:</strong> ${task.repeat}`;
-        if (task.repeat === "Daily" && task.timesPerDay) taskDetails += ` - ${task.timesPerDay} time(s)/day`;
-        if (task.repeat === "Weekly" && task.timesPerWeek) taskDetails += ` - ${task.timesPerWeek} time(s)/week`;
-        if (task.repeat === "Monthly" && task.timesPerMonth) taskDetails += ` - ${task.timesPerMonth} time(s)/month`;
-        taskDetails += "<br>";
-    }
-    if (task.date) taskDetails += `<strong>Date:</strong> ${task.date}<br>`;
-    if (task.users?.length) taskDetails += `<strong>Users:</strong> ${task.users.join(", ")}<br>`;
-    if (task.reward && task.reward !== "0") taskDetails += `<strong>Reward:</strong> ${task.reward} 🍯<br>`;
-    taskDetails += `<strong>Current Turn:</strong> ${currentTurn}<br>`;
-    taskDetails += `<strong>Next:</strong> ${nextUser}<br>`;
-    taskDetails += `<strong>Completed:</strong> ${completedCount}/${repeatLimit}<br>`;
-
-    if (completedUsers.length > 0) {
-        taskDetails += `
-            <div style="margin-top: 8px;">
-                <strong>Completed by:</strong> ${completedUsers.join(", ")}
-                <button id="editCompletionBtn" style="margin-left: 10px; padding: 4px 8px; font-size: 12px; border-radius: 6px; background: var(--primary-color); color: var(--secondary-color); border: none; cursor: pointer;">Edit</button>
-            </div>
-        `;
+    const completedSet = new Set(completedUsers);
+    for (let i = 1; i <= userOrder.length; i++) {
+      const index = (task.currentTurnIndex + i) % userOrder.length;
+      if (!completedSet.has(userOrder[index])) {
+        nextUser = userOrder[index];
+        break;
+      }
     }
 
-    taskDetails += `
-        <br>
-        <button id="editTurnBtn" style="padding: 6px 10px; background: var(--primary-color); color: var(--secondary-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Turn Order</button>
-        <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Task</button>
+    const isCompleted = completedCount >= repeatLimit;
+
+    taskDiv.innerHTML = `
+      <strong>${task.title}</strong><br>
+      Turn: ${currentTurn}<br>
+      Next: ${nextUser}<br>
+      Completed: ${completedCount}/${repeatLimit}<br>
+      ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
+      <button class="delete-btn">Delete</button>
     `;
 
-    const modal = document.createElement("div");
-    modal.className = "task-modal";
-    modal.innerHTML = `<div class="modal-content">${taskDetails}</div>`;
-    document.body.appendChild(modal);
-
-    modal.addEventListener("click", (e) => {
-        if (e.target.classList.contains("task-modal")) modal.remove();
+    taskDiv.addEventListener("click", async (e) => {
+      if (!e.target.classList.contains("delete-btn")) {
+        const result = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+        const latestTask = (await result.json()).tasks.find(t => t.title === task.title && t.date === task.date);
+        if (latestTask) showTaskDetails(latestTask);
+      }
     });
 
-    document.getElementById("editTurnBtn").addEventListener("click", () => {
-        modal.remove();
-        showEditTurnModal(task);
+    taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+      if (confirm("Are you sure you want to delete this task?")) {
+        await deleteTaskFromBackend(task.title, task.date);
+        loadTasksForDate(selectedDate);
+      }
     });
 
-    document.getElementById("editTaskBtn").addEventListener("click", () => {
-        localStorage.setItem("familyApp_editTask", JSON.stringify(task));
-        localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date);
-        window.location.href = "/BeeMazing-Y1/mobile/3-Tasks/addtasks.html";
-    });
-
-    const editBtn = document.getElementById("editCompletionBtn");
-    if (editBtn) {
-        editBtn.addEventListener("click", (e) => {
-            e.stopPropagation();
-            modal.remove();
-            showEditCompletionModal(task, completedUsers, selectedDate, modal);
-        });
-    }
+    taskList.appendChild(taskDiv);
+    enableSwipeToDelete(taskDiv);
+  });
 }
 
 
@@ -713,7 +640,113 @@ const isCompleted = completedCount >= repeatLimit;
 
 
 
-        // Calculate the current turn for a given date
+
+
+
+
+
+
+
+async function showTaskDetails(task) {
+  const selectedDate = document.querySelector(".day.selected")?.dataset.date;
+  if (!selectedDate) return;
+
+  const userOrder = [...task.users];
+
+  const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                      task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                      task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+  const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+  const completedCount = completedUsers.length;
+
+  let currentTurn = task.currentTurnIndex !== undefined ? userOrder[task.currentTurnIndex] : userOrder[0];
+  let nextUser = currentTurn;
+
+  const completedSet = new Set(completedUsers);
+  for (let i = 1; i <= userOrder.length; i++) {
+    const index = (task.currentTurnIndex + i) % userOrder.length;
+    if (!completedSet.has(userOrder[index])) {
+      nextUser = userOrder[index];
+      break;
+    }
+  }
+
+  let taskDetails = `
+    <strong>Title:</strong> ${task.title}<br>
+    ${task.notes ? `<strong>Notes:</strong> ${task.notes}<br>` : ""}
+    ${task.room ? `<strong>Room:</strong> ${task.room}<br>` : ""}
+    <strong>Frequency:</strong> ${task.repeat}
+    ${task.repeat === "Daily" && task.timesPerDay ? ` - ${task.timesPerDay} time(s)/day` : ""}
+    ${task.repeat === "Weekly" && task.timesPerWeek ? ` - ${task.timesPerWeek} time(s)/week` : ""}
+    ${task.repeat === "Monthly" && task.timesPerMonth ? ` - ${task.timesPerMonth} time(s)/month` : ""}
+    <br>
+    <strong>Date:</strong> ${task.date}<br>
+    <strong>Users:</strong> ${userOrder.join(", ")}<br>
+    ${task.reward && task.reward !== "0" ? `<strong>Reward:</strong> ${task.reward} 🍯<br>` : ""}
+    <strong>Current Turn:</strong> ${currentTurn}<br>
+    <strong>Next:</strong> ${nextUser}<br>
+    <strong>Completed:</strong> ${completedCount}/${repeatLimit}<br>
+  `;
+
+  if (completedUsers.length > 0) {
+    taskDetails += `
+      <div style="margin-top: 8px;">
+        <strong>Completed by:</strong> ${completedUsers.join(", ")}
+        <button id="editCompletionBtn" style="margin-left: 10px; padding: 4px 8px; font-size: 12px; border-radius: 6px; background: var(--primary-color); color: var(--secondary-color); border: none; cursor: pointer;">Edit</button>
+      </div>
+    `;
+  }
+
+  taskDetails += `
+    <br>
+    <button id="editTurnBtn" style="padding: 6px 10px; background: var(--primary-color); color: var(--secondary-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Turn Order</button>
+    <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Task</button>
+  `;
+
+  const modal = document.createElement("div");
+  modal.className = "task-modal";
+  modal.innerHTML = `<div class="modal-content">${taskDetails}</div>`;
+  document.body.appendChild(modal);
+
+  modal.addEventListener("click", (e) => {
+    if (e.target.classList.contains("task-modal")) modal.remove();
+  });
+
+  document.getElementById("editTurnBtn").addEventListener("click", () => {
+    modal.remove();
+    showEditTurnModal(task);
+  });
+
+  document.getElementById("editTaskBtn").addEventListener("click", () => {
+    localStorage.setItem("familyApp_editTask", JSON.stringify(task));
+    localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date);
+    window.location.href = "/BeeMazing-Y1/mobile/3-Tasks/addtasks.html";
+  });
+
+  const editBtn = document.getElementById("editCompletionBtn");
+  if (editBtn) {
+    editBtn.addEventListener("click", (e) => {
+      e.stopPropagation();
+      modal.remove();
+      showEditCompletionModal(task, completedUsers, selectedDate, modal);
+    });
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
