--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -351,6 +351,7 @@
   
 
 
+
     async function handleReorder(title, date, newUserOrder) {
   try {
     const response = await fetch("https://beemazing.onrender.com/api/reorder-turns", {
@@ -367,11 +368,36 @@
     const data = await response.json();
     if (!response.ok) throw new Error(data.error || "Failed to reorder turns");
 
-    console.log("Reorder successful, new order:", newUserOrder);
+    console.log("Reorder sent, new order:", newUserOrder);
+
+    // Confirm server update
+    let attempts = 0;
+    const maxAttempts = 5;
+    let confirmed = false;
+    while (attempts < maxAttempts && !confirmed) {
+      const confirmRes = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+        cache: "no-store"
+      });
+      const confirmData = await confirmRes.json();
+      const task = confirmData.tasks.find(t => t.title === title && t.date === date);
+      if (task && JSON.stringify(task.users) === JSON.stringify(newUserOrder)) {
+        confirmed = true;
+        console.log("Server confirmed, users:", task.users);
+      } else {
+        console.log(`Attempt ${attempts + 1}: Server not updated yet, users:`, task?.users);
+        attempts++;
+        await new Promise(resolve => setTimeout(resolve, 1000)); // Wait 1s before retry
+      }
+    }
+
+    if (!confirmed) {
+      throw new Error("Server failed to update order after retries");
+    }
+
     setTimeout(() => {
       console.log("Refreshing tasks after reorder");
       loadTasks();
-    }, 1500); // Increased delay
+    }, 3000); // Increased delay as fallback
   } catch (err) {
     console.error("Error reordering turns:", err);
     const errorDiv = document.createElement("div");
@@ -381,6 +407,8 @@
     setTimeout(() => errorDiv.remove(), 3000);
   }
 }
+
+
 
 
 
