--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -559,6 +559,8 @@ body {
     const result = await response.json();
     const tasks = result.tasks || [];
 
+    console.log("Fetched tasks, users for Task1:", tasks.find(t => t.title === "Task1")?.users);
+
     const taskList = document.getElementById("taskList");
     taskList.innerHTML = "";
 
@@ -605,14 +607,12 @@ body {
       let nextUser = null;
       let completedCount = 0;
 
-      // Combine completions and pendingCompletions
       const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
       const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
       const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
       const completedSet = new Set(allCompletedUsers);
       completedCount = allCompletedUsers.length;
 
-      // Determine the last known turn
       let lastTurnUser = task.turn || (userOrder.length > 0 ? userOrder[0] : null);
       let lastTurnDate = parseLocalDate(task.date ? task.date.split(" to ")[0] : null);
 
@@ -723,6 +723,8 @@ async function showTaskDetails(task) {
   if (!selectedDate) return;
 
   const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
+  console.log("Task details, userOrder:", userOrder);
+
   const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                       task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                       task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
@@ -880,10 +882,6 @@ async function showTaskDetails(task) {
     });
   }
 }
-
-
-
-
 
 
 
