--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -273,23 +273,25 @@
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
         <span>Home</span>
     </a>
-    <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
+    <a href="#" id="profileButton" class="footer-icon" href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
         <span>Profile</span>
     </a>
-    <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
-        <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-        <span>Market</span>
-    </a>
-    <a href="#" id="rewardsButton" class="footer-icon" aria-label="Rewards">
-        <img src="/BeeMazing-Y1/mobile/1-Home/RewardsBtn.png" alt="Rewards" />
-        <span>Rewards</span>
-    </a>
-</div>
 
 
 
   <script>
+
+document.querySelectorAll('.footer a').forEach(link => {
+            const currentPath = window.location.pathname.replace(/\/$/, '');
+            const linkPath = new URL(link.href, window.location.origin).pathname.replace(/\/$/, '');
+            if (currentPath === linkPath) {
+              link.classList.add('active');
+            } else {
+              link.classList.remove('active');
+            }
+          });
+          
     const adminEmail = localStorage.getItem("currentAdminEmail");
     let selectedDate = new Date().toLocaleDateString("sv-SE");
     let allUsers = [];
